Fixed bug with entire grid not showing. Also added modal for size button. No backend functionality added yet.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1,p,button { 
+h1,h5,p,button { 
     font-family: monaco,Consolas,Lucida Console,monospace;
 }
 
